[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Pselect.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui_panel_3d.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "powerup"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 0.01, 1 ), Vector3( 1, 0.03, 1 ), Vector3( 1, 1.2, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 13, 0 ), Vector3( 0, 13, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "powerup"

[sub_resource type="Animation" id=3]
resource_name = "powerup"

[node name="Pselect" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.80188, 6.98534 )

[node name="CharacterSelect" parent="Camera" instance=ExtResource( 2 )]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, -2.258, 0.0331204, -2.81734 )
UI = "res://scenes/2DUI/PlayerUI/PlayerSelect/PlayerSelectArea.tscn"
resolution = Vector2( 600, 1000 )
ratio = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/CharacterSelect"]
anims/powerup = SubResource( 1 )

[node name="Health" parent="Camera" instance=ExtResource( 2 )]
transform = Transform( 0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 6.897, 3.748, -7.119 )
UI = "res://scenes/2DUI/PlayerUI/PlayerSelect/HealthInfo.tscn"
handle_input = false
resolution = Vector2( 204, 169 )
ratio = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/Health"]
anims/powerup = SubResource( 2 )

[node name="Name" parent="Camera" instance=ExtResource( 2 )]
transform = Transform( 0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 4.161, -2.199, -4.79 )
UI = "res://scenes/2DUI/PlayerUI/PlayerSelect/NameSelect.tscn"
resolution = Vector2( 1000, 300 )
ratio = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/Name"]
anims/powerup = SubResource( 3 )

[node name="Location" type="Position3D" parent="."]

[node name="holdcount" type="Timer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_Pselect_visibility_changed"]
[connection signal="timeout" from="holdcount" to="." method="_on_holdcount_timeout"]
